implement KubeConfigSelectionControllerTest