@@ -68,15 +68,27 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:5.11.0'
     testImplementation "org.assertj:assertj-core:3.25.1"
     testImplementation "org.testfx:testfx-junit5:4.0.18"
-
-    // https://mvnrepository.com/artifact/org.zeroturnaround/zt-zip
-    testImplementation 'org.zeroturnaround:zt-zip:1.17'
-    // https://mvnrepository.com/artifact/org.testfx/testfx-core
     testImplementation 'org.testfx:testfx-core:4.0.18'
+    testImplementation 'org.testfx:openjfx-monocle:21.0.2'
+
+    testImplementation 'org.zeroturnaround:zt-zip:1.17'
+    testImplementation 'org.hamcrest:hamcrest:2.1'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs([
+            "--add-exports", "javafx.graphics/com.sun.javafx.application=org.testfx",
+             "--add-opens", "javafx.graphics/com.sun.javafx.application=org.testfx",
+             "--add-opens", "javafx.graphics/com.sun.glass.ui=org.testfx",
+            "--add-opens", "io.github.vcvitaly.k8cp/io.github.vcvitaly.k8cp.controller.init=org.testfx.junit5",
+            "--add-exports", "javafx.base/com.sun.javafx.logging=org.testfx.monocle",
+            "--add-exports", "javafx.graphics/com.sun.javafx.util=org.testfx.monocle",
+            "--add-exports", "javafx.graphics/com.sun.glass.ui=org.testfx.monocle",
+            "--add-opens", "javafx.graphics/com.sun.glass.ui=org.testfx.monocle",
+            "--add-opens", "io.github.vcvitaly.k8cp/io.github.vcvitaly.k8cp.controller.init=org.testfx.monocle",
+            "-Djava.awt.headless=true", "-Dtestfx.robot=glass", "-Dtestfx.headless=true", "-Dprism.order=sw"
+    ])
 }
 
 jlink {
